Code samples added

--- a/LondonMeetup.Demo.V8Way/LondonMeetup.Demo.V8Way.csproj
+++ b/LondonMeetup.Demo.V8Way/LondonMeetup.Demo.V8Way.csproj
@@ -2112,6 +2112,7 @@
     <Compile Include="CodeSamples\Components\MyPublishEventComponent.cs" />
     <Compile Include="CodeSamples\Components\MyValidationHandlerComponent.cs" />
     <Compile Include="CodeSamples\Components\ProductIndexComponent.cs" />
+    <Compile Include="CodeSamples\Composers\SetMediaFileSystemComposer.cs" />
     <Compile Include="CodeSamples\Composers\CorsComposer.cs" />
     <Compile Include="CodeSamples\Composers\CustomCodeContentAppComposer.cs" />
     <Compile Include="CodeSamples\Composers\ExamineEventComposer.cs" />
