changes to blog post doc type

--- a/LondonMeetup.Demo.V8Way/uSync/v8/ContentTypes/blogpost.config
+++ b/LondonMeetup.Demo.V8Way/uSync/v8/ContentTypes/blogpost.config
@@ -20,6 +20,19 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>f17cae39-6e3a-4430-9e18-2f0d330f2038</Key>
+      <Name>Blog Date</Name>
+      <Alias>blogDate</Alias>
+      <Definition>5046194e-4237-453c-a547-15db3a07c4e1</Definition>
+      <Type>Umbraco.DateTime</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>4</SortOrder>
+      <Tab>Content</Tab>
+      <Variations>Nothing</Variations>
+    </GenericProperty>
+    <GenericProperty>
       <Key>66ccce27-b074-4a3b-9ac5-95807f610a29</Key>
       <Name>Content</Name>
       <Alias>bodyText</Alias>
