--- a/LondonMeetup.Demo.V8Way/Web.config
+++ b/LondonMeetup.Demo.V8Way/Web.config
@@ -23,7 +23,7 @@
   </umbracoConfiguration>
   <clientDependency configSource="config\ClientDependency.config" />
   <appSettings>
-    <add key="Umbraco.Core.ConfigurationStatus" value="8.6.1" />
+    <add key="Umbraco.Core.ConfigurationStatus" value="8.6.2" />
     <add key="Umbraco.Core.ReservedUrls" value="" />
     <add key="Umbraco.Core.ReservedPaths" value="" />
     <add key="Umbraco.Core.Path" value="~/umbraco" />
@@ -46,7 +46,9 @@
     string / provider name during your web.config merge.
   -->
   <connectionStrings>
-    <remove name="umbracoDbDSN" /><add name="umbracoDbDSN" connectionString="server=localhost;database=umbracov8way;user id=dbuser;password='password123'" providerName="System.Data.SqlClient" /></connectionStrings>
+    <remove name="umbracoDbDSN" />
+    <add name="umbracoDbDSN" connectionString="server=localhost;database=umbracov8way;user id=dbuser;password='password123'" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SqlServerCe.4.0" />
@@ -170,6 +172,10 @@
         <remove name="Access-Control-Allow-Credentials" />
         <remove name="Access-Control-Allow-Methods"></remove>
         <add name="Access-Control-Allow-Credentials" value="true" />
+        <remove name="X-Frame-Options" />
+        <add name="X-Frame-Options" value="sameorigin" />
+        <remove name="Strict-Transport-Security" />
+        <add name="Strict-Transport-Security" value="max-age=10886400" />
       </customHeaders>
     </httpProtocol>
     <!-- Increase the default upload file size limit -->
