bundling and minification example added

--- a/LondonMeetup.Demo.V8Way/Web.config
+++ b/LondonMeetup.Demo.V8Way/Web.config
@@ -25,7 +25,7 @@
   <appSettings>
     <add key="Umbraco.Core.ConfigurationStatus" value="8.6.2" />
     <add key="Umbraco.Core.ReservedUrls" value="" />
-    <add key="Umbraco.Core.ReservedPaths" value="" />
+    <add key="Umbraco.Core.ReservedPaths" value="~/bundles/" />
     <add key="Umbraco.Core.Path" value="~/umbraco" />
     <add key="Umbraco.Core.HideTopLevelNodeFromPath" value="true" />
     <add key="Umbraco.Core.TimeOutInMinutes" value="20" />
@@ -235,6 +235,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
