--- a/LondonMeetup.Demo.V8Way/packages.config
+++ b/LondonMeetup.Demo.V8Way/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net472" />
   <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
@@ -21,6 +22,7 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
@@ -61,6 +63,7 @@
   <package id="UmbracoCms" version="8.6.2" targetFramework="net472" />
   <package id="UmbracoCms.Core" version="8.6.2" targetFramework="net472" />
   <package id="UmbracoCms.Web" version="8.6.2" targetFramework="net472" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net472" />
   <package id="uSync" version="8.5.0" targetFramework="net472" />
   <package id="uSync.Core" version="8.5.0" targetFramework="net472" />
 </packages>
